# minipro

./: CMakeLists.txt  README.md  config.h.cmake  config.h.in  minipro_db.ini  minipro_db_fused.ini
src/: CMakeLists.txt  database.c  database.h  infoic.c  main.c  minipro.c  minipro.h
